# flask-ml

./: .flaskenv  flask-ml-iris.ipynb  iris_rfc.pkl  pyproject.toml  run.py
flask_ml/: __init__.py
flask_ml/blueprints/api/: __init__.py  resources.py
